# agent-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  PROJECT_STUDY_GUIDE.md  README.md  docker-compose.roles.yml  docker-compose.workers.yml  docker-compose.yml  pyproject.toml
agent_gateway/: __init__.py  agents.py  app.py  config.py  config_loader.py  ids.py  models.py  router.py
config/: agents.json  bindings.json  channels.json  profiles.json
deploy/: backup-restore.md  docker-compose.md  multi-role-compose.md  reverse-proxy.md  systemd.md
doc/: 20.8 压测执行清单.md  Agent接入简化机制调研报告.md  Agent能力边界总览.md  Agent路由验收清单.md  Codex与ClaudeCode多Agent协作机制调研.md  Phase21 Redis会话调度器改造说明.md  PostgreSQL状态外置设计.md  PostgreSQL状态迁移审计.md  RabbitMQ入站Session分区评估.md  Redis与RabbitMQ使用代码片段.md  个人饮食减肥Agent实施方案.md  主流Agent应用多Agent交互调研报告.md  企业微信通道接入调研.md  入站任务分发演进复盘.md  分布式Lane接管与迁移策略.md  分布式Lane运维Runbook.md  分布式入站任务调度架构说明.md  分布式入站任务顺序与互斥技术选型.md  多Agent协作路线规划与执行.md  消息闭环实现说明.md  键名与ID命名规范.md  项目架构说明.md
plan/: 个人饮食减肥Agent计划执行手册.md  多Agent协作系统设计与实施计划.md
scripts/: build_capacity_baseline.py  check_agent_manifests.py  eval_agent_routing.py  load_test_gateway.py  run_capacity_matrix.py  scaffold_agent.py  smoke_distributed_lane.py
tests/: test_agent_contracts.py  test_agent_manifest.py  test_agent_manifest_loader.py  test_agent_routing_eval.py  test_alerts_runtime.py  test_app_cli.py  test_app_config_repository.py  test_autonomy.py  test_builtin_tools.py  test_capacity_baseline.py  test_channel_manager.py  test_channel_runtime.py  test_channels.py  test_config_loader.py  (+49 more)
(+267 files in other folders)
